# semantic-steve

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  examples.py  package.json  pyproject.toml  requirements.txt  run.py  setup.py  skills.py  usage_example.py
backend_ts/: README.md  package.json
backend_ts/src/: backend.ts  constants.ts  envState.ts  index.ts  oldPathfind.ts  pathfind.ts  stringParsers.ts  test.ts  testPathfind.ts  types.ts
backend_ts/src/modules/: approach.ts  basicPathfinding.ts  help.ts  index.ts
backend_ts/src/movement/: movement.ts  movement1.ts  types.ts
backend_ts/src/plugin/: index.ts  test.ts
backend_ts/src/world/: types.ts  utils.ts  worldState.ts  worldState1.ts
backend_ts/test/: chat.ts  cli.ts  common.ts  test.ts
eai25_experiments/: analyze_results.py  constants.py  experiment.py
eai25_experiments/data/: annotations.csv  gpt_scores.csv  summary.csv
screenshot_eval/: experiment.py
screenshot_eval/data/: annotations.csv
semantic_steve/: __init__.py  cli.py  functions.py  test.py
semantic_steve/js/: README.md  package.json  tsconfig.json
semantic_steve/js/src/: constants.ts  env-state.ts  index.ts  inventory-changes.ts  main.ts  oldStringsParser.ts  py-messages.ts  results-messages.ts  results.ts  self-preserver.ts  semantic-steve.ts  skill-results.ts  skills-registry.ts  string-parsers.ts  types.ts  utils.ts
semantic_steve/js/src/core/: pathfinding.ts
semantic_steve/js/src/env-state/: env-state.ts  inventory.ts
semantic_steve/js/src/skill/: craft-items.ts  generic-results.ts  index.ts  mine-blocks.ts  pathfind-to-coordinates.ts  place-block.ts  skill.ts  smelt-items.ts  take-screenshot-of.ts
semantic_steve/js/src/skills/: README.md  _pathfind-to-coordinates.ts  pathfind-to-coordinates.ts
semantic_steve/js/src/thing/: biome.ts  block.ts  factory.ts  index.ts  item-entity.ts  itemEntity.ts  player.ts  thing.ts
semantic_steve/js/src/thing-type/: factory.ts  index.ts  thing-type.ts
semantic_steve/py/: cli.py  constants.py  js_messages.py  js_process.py  js_process_manager.py  messages.py  schema.py  semantic_steve.py  skills_docs.py  utils.py
semantic_steve/screenshot_steve/: __init__.py  get_score.py  run_task.py  schema.py  utils.py
(+75 files in other folders)
