[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-steve"
version = "0.0.1"
authors = [{ name = "Sonny George" }]
description = "A semantic wrapper for controlling Minecraft 'Steve'"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/sonnygeorge/semantic-steve"