[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "semantic-steve"
version = "0.0.1"
authors = [{ name = "Sonny George" }]
description = "A semantic wrapper for controlling Minecraft 'Steve'"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyzmq>=26.2.1,<27",
    "prompt_toolkit>=3.0.50,<4",
    "pydantic>=2.11.1,<3",
    "tenacity>=9.1.2",
    "openai>=1.76.2",
]
[project.optional-dependencies]
dev = [
    "pre_commit>=4.2.0,<5",
]

[project.urls]
Homepage = "https://github.com/sonnygeorge/semantic-steve"

[tool.ruff]
line-length = 93
target-version = "py311"

extend-exclude = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E203",  # whitespace before ':' (black-compatible)
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long (handled by line-length setting)
]

fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"quick_tests.py" = ["E402"]
"run_gui.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["semantic_steve"]
